<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ackertocan</name>
  <version>0.0.0</version>
  <description>The package include a node that convert Ackermann steering msg to CAN msg</description>
  <maintainer email="ych363@aucklanduni.ac.nz">Yacht Chen</maintainer>
  <license>Apache License 2.0</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>random</build_depend>
  <build_depend>ackermann_msg</build_depend>
  <build_depend>moa_msgs</build_depend>
  <build_depend>numpy</build_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msg</exec_depend>
  <exec_depend>moa_msgs</exec_depend>
  <exec_depend>random</exec_depend>
  <exec_depend>numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
